# OpenCVTools

./: README.md
RedShiftBlur/: CMakeLists.txt  README.MD  RedShiftBlur.cpp  RedShiftBlur.py
