cmake_minimum_required(VERSION 2.8)
project( RedShiftBlur )
find_package( OpenCV REQUIRED )
if (UNIX)
	add_executable( RedShiftBlurLin RedShiftBlur.cpp )
	target_link_libraries( RedShiftBlurLin ${OpenCV_LIBS} )
endif (UNIX)
if (WIN32)
	add_executable( RedShiftBlurWin RedShiftBlur.cpp )
	target_link_libraries( RedShiftBlurWin ${OpenCV_LIBS} )
endif (WIN32)